--- a/template/index.html
+++ b/template/index.html
@@ -24,14 +24,104 @@
 
     <div class="data-table-wrapper">
 
-        <table>
+        <!-- table of data from table in database -->
+        <div class="column" >
+            <div class="row">
+                Id
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+        </div>
 
-            <tr>
-                <td>Price</td>
-                <td>4000%</td>
-            </tr>
 
-        </table>
+        <div class="column" >
+            <div class="row">
+                Id
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+        </div>
+
+        <div class="column" >
+            <div class="row">
+                Id
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+        </div>
+
+        <div class="column" >
+            <div class="row">
+                Id
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+            <div class="row">
+                1
+            </div>
+        </div>
+        
 
     </div>
 
