added a lot of function

--- a/template/index.html
+++ b/template/index.html
@@ -5,13 +5,13 @@
 <head>
     <title>DBAS</title>
     <link rel="shortcut icon" href="/static/favicon.ico" />
-    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="static/main.css">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0">
     <script src="static/main.js">
     </script>
 </head>
 
-<body onload="AddTablesToNavBar();">
+<body onload="GetDataForTable();AddTablesToNavBar();">
     <div class="tables-navbar">
 
         <!-- here names of data tables -->
@@ -21,24 +21,18 @@
     <div class="raw-sql-bar">
         <!-- CRUD navbar -->
         <input type="text" placeholder="enter your sql request" class="RawSQLInput" onfocus="IsInputActive = true" onblur="IsInputActive = false"> </input>
-        <button>CREATE</button>
-        <button>READ</button>
-        <button>UPDATE</button>
-        <button>DELETE</button>
+        <button onclick="NewWindowCUD('CREATE');">CREATE</button>
+        <button onclick="ReadTable(CurrentTable);">READ</button>
+        <button onclick="NewWindowCUD('UPDATE');">UPDATE</button>
+        <button onclick="NewWindowCUD('DELETE');">DELETE</button>
 
     </div>
 
-    <div class="data-table-wrapper">
-
-        <!-- table of data from table in database -->
-        <div class="column">
+    <table class="DataTable">
 
 
+    </table>
 
-        </div>
-
-
-    </div>
 
 </body>
 
