--- a/static/main.css
+++ b/static/main.css
@@ -5,6 +5,13 @@ body {
     color: darkslateblue;
 }
 
+table,
+td,
+th {
+    border-collapse: collapse;
+    border: 3px solid black;
+}
+
 .tables-navbar {
     display: flex;
     justify-content: center;
@@ -49,26 +56,11 @@ body {
     border-radius: 15%;
 }
 
-.data-table-wrapper {
-    padding-top: 5vh;
-    height: fit-content;
-    display: flex;
-    justify-content: left;
-    flex-grow: 1;
-    flex-direction: row;
-}
-
-.column {
-    display: inline-block;
-    flex-direction: column;
-    width: fit-content;
-    border: 1px black solid;
-}
-
-.row {
-    width: fit-content;
-    border: 1px black solid;
-    min-width: 3vw;
-    box-sizing: border-box;
-    padding: 7px;
+.pop-up-window {
+    z-index: 999;
+    width: 45vw;
+    height: 30vh;
+    padding-left: auto;
+    padding-right: auto;
+    border: 3px black solid;
 }
