added readme.md, finished project

--- a/template/index.html
+++ b/template/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="raw-sql-bar">
-        <!-- CRUD navbar -->
+        <p id="CurrentTable"></p>
         <input type="text" placeholder="enter your sql request" class="RawSQLInput" onfocus="IsInputActive = true" onblur="IsInputActive = false"> </input>
         <button onclick="ReadTable(CurrentTable);">Update Current Table</button>
 
